--- a/bloco_3/dia_2/parte2.html
+++ b/bloco_3/dia_2/parte2.html
@@ -4,15 +4,16 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <style>
-      h1{ font-family: sans-serif;}
+      /* h1{ font-family: sans-serif;}
       p{ font-weight: 600;}
       body{font-size: 16px;}
       p{ font-size: 3em; font-style: italic;}
       li{ line-height: 50px; text-align: center;}
       #amarelo{background-color: yellow;}
       #verde{background-color: green;}
-      #marrom{background-color:#964b00 ;}
+      #marrom{background-color:#964b00 ;} */
     </style>
   </head>
   <body>
