--- a/bloco_3/dia_3/index.html
+++ b/bloco_3/dia_3/index.html
@@ -8,9 +8,14 @@
 </head>
 <body>
   <div class="caixa width-and-height" style="background: #036b52">A</div>
-  <div class="caixa width-and-height padding" style="background: #41197f;">B</div>
-  <div class="caixa width-and-height padding margin" style="background: #444955">C</div>
-  <div class="caixa width-and-height padding margin border" style="background: #3898EC">D</div>
-</body>
+    <div class="padding">
+      <div class="caixa width-and-height padding" style="background: #41197f;">B</div>
+        <div class="margin">
+          <div class="caixa width-and-height padding margin" style="background: #444955">C</div>
+            <div class="border">
+              <div class="caixa width-and-height padding margin border" style="background: #3898EC">D</div>
+            </div>
+        </div>
+      </div>
+    </body>
 </html>
-
