--- a/bloco_05/dom-seletores.html
+++ b/bloco_05/dom-seletores.html
@@ -33,9 +33,9 @@
     <h1 class="title">Exercício 5.1 - JavaEscripito </h1>
     <div class="main-content">
       <div class="center-content">
-        <p>Texto padrão do nosso site</p>
-        <p>-----</p>
-        <p>Trybe</p>
+        <p class="pp">Texto padrão do nosso site</p>
+        <p id="sobre" class="pp">-----</p>
+        <p class="pp">Trybe</p>
       </div>
     </div>
     <script>
@@ -44,19 +44,48 @@
         - document.getElementById()
         - document.getElementsByClassName()
         - document.getElementsByTagName()
- Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)*/
- document.getElementById(p).innerText = 'yuri garrido o futuro junin.';
+ Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)
+*/
+let sobre = document.getElementById('sobre')
+sobre.innerText = 'Me vejo como uma pessoa desenvolvedora, bem de vida e com uma ótima qualidade de vida..'
+/*
 
- /*Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
- */ 
-document.querySelector(' .main-content') = backgr
-
+ Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).*/
+ let quadradoAmarelo = document.getElementsByClassName('main-content') [0]
+ quadradoAmarelo.style.backgroundColor = 'rgb(76,164,109)' 
+ 
  /*
  Crie uma função que mude a cor do quadrado vermelho para branco.
+ */ 
+let mudaC2 = document.getElementsByClassName('center-content') [0]
+mudaC2.style.backgroundColor = 'white'
+
+/*
  Crie uma função que corrija o texto da tag <h1>.
+  */
+ let corrige = document.getElementsByClassName('title') [0]
+ corrige.innerText = 'Exercício 5.1 - JavaScript'
+  /*
  Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
+  */
+ let upCase = document.getElementsByClassName('center-content') [0]
+ upCase.style.textTransform = 'uppercase'
+  /*
  Crie uma função que exiba o conteúdo de todas as tags <p> no console.
         */
+        function repete () {
+
+for(let index = 0; index < 'center-content'; index += 1){
+
+console.log(
+document.getElementsByClassName('p')[index]
+)
+
+}
+
+}
+
+let console = document.getElementsByClassName('p') 
     </script>
   </body>
 </html>
