--- a/bloco_05/dia_01/javascript-dom-eventos-e-web-storage_1/dom-seletores.html
+++ b/bloco_05/dia_01/javascript-dom-eventos-e-web-storage_1/dom-seletores.html
@@ -73,19 +73,7 @@ mudaC2.style.backgroundColor = 'white'
   /*
  Crie uma função que exiba o conteúdo de todas as tags <p> no console.
         */
-        function repete () {
-
-for(let index = 0; index < 'center-content'; index += 1){
-
-console.log(
-document.getElementsByClassName('p')[index]
-)
-
-}
-
-}
-
-let console = document.getElementsByClassName('p') 
+ console.log(document.querySelectorAll('p'));
     </script>
   </body>
 </html>
